<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Наименование приложения -->
    <string name="app_name">PrayTimes</string>
        
    <!-- Ключи настроек "Расчета" -->
    <string name="keyMethod">METHOD</string>
    <string name="keyUseGPS">USE_GPS</string>
    <string name="keyLongitude">LONGITUDE</string>
    <string name="keyLatitude">LATITUDE</string>
    <string name="keyElevation">ELEVATION</string>
    <string name="keyTimeZone">TIME_ZONE</string>
    <string name="keyTimeZoneValue">TIME_ZONE_VALUE</string>
    <string name="keyDST">DST</string>
    <!-- Ключи настроек "Расчета" -->
    
    <!-- Наименования настроек "Расчета" -->
    <string name="MethodCalc">Calculation method</string>
    <string name="UseGPS">Use GPS</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    
    <string name="Longitude">Longitude</string>
    <string name="Latitude">"Latitude"</string>
    <string name="Elevation">Elevation</string>
    
    <string name="TimeZone">Time Zone</string>
    <string name="AutoTimeZone">Auto Time Zone</string>
    <string name="TimeZoneSelect">Select Time Zone</string>
    
    <string name="DST">Use daylight saving time</string>
    <!-- Наименования настроек "Расчета" -->
    <!-- 
    <string name="Auto">Auto</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
     -->
     
    <!-- Ключи настроек "Будильника" -->
    <string name="keyAlarmBefore">ALARM_BEFORE</string>
    <string name="keyAlarmBeforeRington">ALARM_BEFORE_RINGTON</string>
    <string name="keyAlarmBeforeVibro">ALARM_BEFORE_VIBRO</string>
    <string name="keyAlarm">ALARM</string>
    <string name="keyAlarmRington">ALARM_RINGTON</string>
    <string name="keyAlarmVibro">ALARM_VIBRO</string>
    <!-- Ключи настроек "Будильника" -->
    
    <!-- Наименования настроек "Будильника" -->
    <string name="AlarmBefore">Alarm before</string>
    <string name="Alarm">Alarm</string>
    <string name="UseAlarmNow">Alarm now</string>
    <string name="Rington">Rington</string>
    <string name="Vibration">Vibration</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    
    <string-array name="reminder_names">
		<item>before 5 minutes</item>
		<item>before 10 minutes</item>
		<item>before 15 minutes</item>
		<item>before 20 minutes</item>
		<item>before 25 minutes</item>
		<item>before 30 minutes</item>
		<item>before 35 minutes</item>
		<item>before 40 minutes</item>
		<item>before 45 minutes</item>
		<item>before 50 minutes</item>
		<item>before 55 minutes</item>
		<item>before 60 minutes</item>
	</string-array>
	<string-array name="reminder_index">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
		<item>11</item>
	</string-array>
    <!-- Наименования настроек "Будильника" -->
    
    <string name="preferencesCalculation">Settings for calculation</string>
	<string name="preferencesAlarm">Settings for alarm</string>
    
    <string name="Method">Method</string>
    
    <string name="textTypeTimeZone">Time Zone</string>
	<string name="textAutoTimeZone">Auto</string>
	<string name="textManualTimeZone">Manual</string>
	
	<string name="textGPS">Use GPS</string>
	<string name="textAutoGPS">Auto</string>
	<string name="textManualGPS">Manual</string>
		
	<string name="textTypeDST">Use daylight saving time</string>
	<string name="textAutoDST">Auto</string>
	<string name="textEnabledDST">Enabled</string>
	<string name="textDisabledDST">Disabled</string>
	
	<string name="textBtnSave">Save</string>
	
	
	<string-array name="methods_names">
		<item>Muslim World League</item>
		<item>Islamic Society of North America (ISNA)</item>
		<item>Egyptian General Authority of Survey</item>
		<item>Umm Al-Qura University, Makkah</item>
		<item>University of Islamic Sciences, Karachi</item>
		<item>Institute of Geophysics, University of Tehran</item>
		<item>Shia Ithna-Ashari, Leva Institute, Qum</item>
	</string-array>
	<string-array name="methods_index">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
	</string-array>
    
    <string-array name="DST_names">
		<item>Auto</item>
		<item>Enabled</item>
		<item>Disabled</item>
	</string-array>
	<string-array name="DST_index">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
    
</resources>
